# old-philosophers

./: .gitignore  README.md
philo_one/: CMakeLists.txt  Makefile
philo_one/include/: philo_one.h
philo_one/src/: aff.c  chrono.c  clean_exit.c  main.c  monitor.c  philosopher.c  routine.c  utils.c
philo_three/: Makefile  philo_three  philo_two
philo_three/include/: philo_three.h
philo_three/src/: aff.c  clean_exit.c  introspect.c  main.c  monitor.c  proc.c  routine.c  semaphore.c  utils.c
philo_two/: Makefile  philo_two
philo_two/include/: philo_two.h
philo_two/src/: aff.c  chrono.c  clean_exit.c  main.c  monitor.c  philosopher.c  routine.c  semaphore.c  utils.c
